<resources>
    <string name="app_name">RegisterTest</string>
    <string name="track_list">Lista</string>

    <!-- DEFAULT TRACK -->
    <string name="default_track_title">Título canción</string>
    <string name="default_track_author">Autor/a</string>

    <!-- DEFAULT PLAYLIST -->
    <string name="default_playlist_name">Título playlist</string>
    <string name="default_playlist_owner">Autor/a</string>

    <!-- ACTION -->
    <string name="action_login">Iniciar sesión</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_advance_list">Mostrar Tracks (avanzado)</string>
    <string name="action_list">Mostrar Tracks</string>
    <string name="action_accept">Aceptar</string>
    <string name="action_decline">Cancelar</string>
    <string name="action_cloudinary">Subir canción</string>

    <!-- INFO STATE -->
    <string name="state_wait">Porfavor espere..</string>
    <string name="state_task_in_progress">Tarea en proceso</string>
    <string name="state_error_connexion">Error de conexión!</string>
    <string name="state_success_title">Éxito</string>
    <string name="state_task_completed">Tarea completada con éxito!</string>
    <string name="state_error_title">Error</string>
    <string name="state_error_default">Algo salió mal!</string>


    <!-- ACTIVITY [ Login ] -->
    <string name="login_username">Nombre usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_yetIdentified">Todavía no estás registrad@ ?</string>
    <string name="login_register_here">Regístrate aquí</string>

    <!-- ACTIVITY [ Mostrar Playlist ] -->
    <string name="show_playlist">Mostrar Playlist</string>
    <string name="show_all_playlist">Crear Playlist</string>
    <string name="boto_mostrar">Mostrar Tracks de Playlist</string>
    <string name="follow_playlist">Seguir</string>

    <!-- ACTIVITY [ Nova Playlist ] -->
    <string name="title_create">Crear playlist</string>
    <string name="name_playlist">Nombre</string>
    <string name="desc_playlist">Descripción</string>
    <string name="action_create">Crear</string>
    <string name="create_playlist">Crear nueva playlist</string>
    <string name="create_playlist_button">+ Crear playlist</string>

    <!-- ACTIVITY [Crear Cançons ] -->
    <string name="create_song_titulo">Título</string>
    <string name="create_song_genre">Género</string>
    <string name="create_song_artist">Autor/a</string>
    <string name="create_song_file">Buscar fichero</string>
    <string name="subir_cancion">+ Subir Canción</string>
    <string name="boto_song">Afegir</string>
    <string name="playlist_name">Nom Playlist: </string>
    <string name="track_name">Nom Cançó: </string>

    <!-- ACTIVITY [Mostrar canciones playlist ] -->
    <string name="text_nom_playlist">Nom Playlist: </string>
    <string name="boto_mostrar_tracks">Mostra les seves Tracks</string>

    <!-- ACTIVITY [ HOME ] -->
    <string name="homeListaExitos">Lista de éxitos </string>
    <string name="homeListaGeneros">Lista de géneros </string>

    <!-- MENU -->
    <string name="Home">Inicio</string>
    <string name="Search">Buscar</string>
    <string name="Library">Biblioteca</string>
    <string name="Profile">Perfil</string>

    <!-- FRAGMENTS (LABELS) -->
    <string name="fragment_playlists">Playlists</string>

    <!-- FRAGMENTS (LIBRARY) -->
    <string name="fragment_Library">Biblioteca</string>

    <!-- FRAGMENTS (PERFIL) -->
    <string name="fragment_Perfil">Perfil</string>
    <string name="fragment_Perfil_canciones">Canciones favoritas</string>
    <string name="fragment_Perfil_playlist">Playlist seguidas</string>

    <string name="addSongToPlaylist">Añadir a Playlist</string>

    <!-- FRAGMENT (SEARCH) -->
    <string name="users">Usuarios</string>
    <string name="playlists">Playlists</string>
    <string name="tracks">Canciones</string>

    <!-- FRAGMENT (GENRE) -->
    <string name="fragment_songs">Songs</string>

    <!-- POPUP MENU -->
    <string name="añadir_a_playlist">Añadir a playlist</string>
    <string name="compartir">Compartir</string>

    <!-- COMPARTIR -->
    <string name="app_id">4F8B3483</string>
    <string name="media_route_menu_title">Enviar a</string>


</resources>