<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/sallefy_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/settings_title"
                android:text="@string/login_username"/>

            <EditText
                android:id="@+id/register_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/settings_title"
                android:text="@string/login_email"/>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:background="@drawable/login_edit_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/settings_title"
                android:text="@string/login_password"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/login_edit_text"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/register_btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_btn"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/gotham_bold"
        android:text="@string/action_register"/>




</LinearLayout>