<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.activity.MainActivity">

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rotation="-20"
        android:scaleX="2"
        android:scaleY="1.7"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorSecondary"
        app:mwhStartColor="@color/colorPrimary" />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402">

        <TextView
            style="@style/TitlesTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_cloudinary" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/settings_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_song_titulo" />

                <EditText
                    android:id="@+id/create_song_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_edit_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/settings_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_song_genre" />

                <Spinner
                    android:id="@+id/create_song_genre"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_edit_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/create_song_file"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_round_white"
                    android:layout_gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/create_song_file"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/create_song_file_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/create_song_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/login_btn"
                    android:fontFamily="@font/gotham_bold"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/action_accept"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>