<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".controller.activity.MainActivity2">

    <com.scwang.wave.MultiWaveHeader
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rotation="-20"
        android:scaleX="2"
        android:scaleY="1.7"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorSecondary"
        app:mwhStartColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/settings_title"
                android:text="@string/playlist_name"/>

        <EditText
            android:id="@+id/Playlist_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/new_pl_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/settings_title"
            android:text="@string/track_name"/>

        <EditText
            android:id="@+id/song_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/new_pl_text"/>

        <Button
            android:id="@+id/afegir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_btn"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:fontFamily="@font/gotham_bold"
            android:text="@string/boto_song" />

    </LinearLayout>
    </LinearLayout>
</RelativeLayout>